[package]
name = "defis_nan_puissance4"
version = "0.1.0"
authors = ["citorva <duet.venceslas@orange.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#piston_window = "*"
#rand = "0.8"
getrandom = "0.2.3"
text_io = "0.1.8"